--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ nav ul li a:hover::after{
     border-radius: 15px;
      margin-left: 25px;
     height: 680px; 
+    object-fit: cover;
 }
 .about-col-2{
     flex-basis: 60%;
@@ -162,7 +163,10 @@ nav ul li a:hover::after{
     background: #ff004f;
     transform: translate(-10px);
 }
-.service-list div i{
+.service-list div img{
+    height: 80px;
+    width: 80px;
+    border-radius: 20px;
     font-size: 50px;
     margin-bottom: 30px;
 }
@@ -198,9 +202,12 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
+    object-fit: cover;
 }
 .layer{
     width: 100%;
